kubernetes/apps/media/base/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11@sha256:aefb67e6a7ff1debdd154a78a7bbb780fd0c873d8639210a7f6a2016ad2b35db
          ports:
            - containerPort: 8096
              name: http
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: "2Gi"
              cpu: "2000m"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: videos
              mountPath: /data/videos
              subPath: videos
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: videos
          persistentVolumeClaim:
            claimName: media-pvc
